bin/tests/snapshots/multiline_spacing__047d5329743a91baaf527516067a79de_fix.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  alpha = [
    "a"
    "b"
  ];
  beta = [
    "c"
    "d"
  ];
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -2,8 +2,9 @@
   alpha = [
     "a"
     "b"
   ];
+
   beta = [
     "c"
     "d"
   ];
