bin/tests/snapshots/multiline_spacing__047d5329743a91baaf527516067a79de_lint_errfmt.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  alpha = [
    "a"
    "b"
  ];
  beta = [
    "c"
    "d"
  ];
}
---
<temp_file_path>>6:3:W:33:[multiline_spacing] a blank line should follow the multiline attribute above
