bin/tests/snapshots/multiline_spacing__180967f9de05fbe348e5d86f27a4f644_fix.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  publish = {
    x = 1;
  };
  zed = 2;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,9 @@
 {
   foo = 1;
+
   publish = {
     x = 1;
   };
+
   zed = 2;
 }
