bin/tests/snapshots/multiline_spacing__180967f9de05fbe348e5d86f27a4f644_lint_errfmt.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  publish = {
    x = 1;
  };
  zed = 2;
}
---
<temp_file_path>>3:3:W:33:[multiline_spacing] a blank line should come before this multiline attribute
