bin/tests/snapshots/multiline_spacing__180967f9de05fbe348e5d86f27a4f644_lint_json.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  publish = {
    x = 1;
  };
  zed = 2;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "multiline_spacing",
      "note": "Multiline attribute is not separated by blank lines",
      "code": 33,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 5,
              "column": 5
            }
          },
          "message": "a blank line should come before this multiline attribute",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 7,
                "column": 2
              }
            },
            "fix": "{\n  foo = 1;\n\n  publish = {\n    x = 1;\n  };\n\n  zed = 2;\n}"
          }
        }
      ]
    }
  ]
}
