bin/tests/snapshots/multiline_spacing__180967f9de05fbe348e5d86f27a4f644_lint_stderr.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  publish = {
    x = 1;
  };
  zed = 2;
}
---
[multiline_spacing] Warning: Multiline attribute is not separated by blank lines
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │ ╭─▶   publish = {
   ┆ ┆   
 5 │ ├─▶   };
   │ │          
   │ ╰────────── a blank line should come before this multiline attribute
───╯
