bin/tests/snapshots/multiline_spacing__25a81bd3c2011f656dd3cfff355c01d9_fix.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];

  zed = 2;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,7 @@
 {
   foo = 1;
+
   kernelModules = [
     "a"
     "b"
   ];
