bin/tests/snapshots/multiline_spacing__25a81bd3c2011f656dd3cfff355c01d9_lint_errfmt.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];

  zed = 2;
}
---
<temp_file_path>>3:3:W:33:[multiline_spacing] a blank line should come before this multiline attribute
