bin/tests/snapshots/multiline_spacing__25a81bd3c2011f656dd3cfff355c01d9_lint_json.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];

  zed = 2;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "multiline_spacing",
      "note": "Multiline attribute is not separated by blank lines",
      "code": 33,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 6,
              "column": 5
            }
          },
          "message": "a blank line should come before this multiline attribute",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 9,
                "column": 2
              }
            },
            "fix": "{\n  foo = 1;\n\n  kernelModules = [\n    \"a\"\n    \"b\"\n  ];\n\n  zed = 2;\n}"
          }
        }
      ]
    }
  ]
}
