bin/tests/snapshots/multiline_spacing__25a81bd3c2011f656dd3cfff355c01d9_lint_stderr.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];

  zed = 2;
}
---
[multiline_spacing] Warning: Multiline attribute is not separated by blank lines
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │ ╭─▶   kernelModules = [
   ┆ ┆   
 6 │ ├─▶   ];
   │ │          
   │ ╰────────── a blank line should come before this multiline attribute
───╯
